--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "www/pyrocms-pro"]
 	path = www/pyrocms-pro
 	url = git@github.com:pyrocms/pyrocms-professional.git
+[submodule "www/pyrocms-pro-james"]
+	path = www/pyrocms-pro-james
+	url = git@github.com:Mode7James/pyrocms-professional.git
