--- a/.gitmodules
+++ b/.gitmodules
@@ -13,9 +13,9 @@
 [submodule "puppet"]
 	path = puppet
 	url = git://github.com/pyrocms/devops-puppet.git
+[submodule "www/pyrocms-pro-official"]
+	path = www/pyrocms-pro-official
+	url = git@github.com:pyrocms/pyrocms-professional.git
 [submodule "www/pyrocms-pro"]
 	path = www/pyrocms-pro
-	url = git@github.com:pyrocms/pyrocms-professional.git
-[submodule "www/pyrocms-pro-james"]
-	path = www/pyrocms-pro-james
 	url = git@github.com:Mode7James/pyrocms-professional.git
