--- a/.gitmodules
+++ b/.gitmodules
@@ -10,6 +10,6 @@
 [submodule "puppet"]
 	path = puppet
 	url = git://github.com/pyrocms/devops-puppet.git
-[submodule "www/pyrocms-pro"]
-	path = www/pyrocms-pro
+[submodule "www/essexlp"]
+	path = www/essexlp
 	url = git@github.com:Mode7James/pyrocms-professional.git
